first commit add minimal request logging for development using Morgan.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,6 +5,9 @@ NODE_ENV=development
 # CORS (comma-separated origins)
 CORS_ORIGINS=http://localhost:3000
 
+# App state
+NODE_ENV=development
+
 # Soroban / Stellar
 SOROBAN_RPC_URL=https://soroban-testnet.stellar.org
 SOROBAN_NETWORK_PASSPHRASE=Test SDF Network ; September 2015
