--- a/backend/package.json
+++ b/backend/package.json
@@ -21,10 +21,10 @@
     "@eslint/js": "^9.39.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/node": "^22.10.2",
     "@types/morgan": "^1.9.9",
+    "@types/node": "^22.10.2",
     "eslint": "^9.39.2",
-    "typescript": "^5.7.2",
-    "tsx": "^4.20.0"
+    "tsx": "^4.20.0",
+    "typescript": "^5.7.2"
   }
 }
